更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -422,15 +422,15 @@ sort: by_weight
 彼此彼此	bcbc
 不吃白不吃	bcbce
 把持不定	bcbd
-装裱	bcbd
+装裱	bcbdi
 装病	bcbg
 不吃不喝	bcbh
 不吹不黑	bcbhe
 白吃白喝	bcbhu
 装逼	bcbi
 装比	bcbio
-罢黜百家	bcbj
 装扮	bcbj
+罢黜百家	bcbji
 妆扮	bcbjo
 别踩白块	bcbk
 不成比例	bcbl
@@ -454,12 +454,12 @@ sort: by_weight
 彼此的	bcde
 装得	bcdeou
 不插电	bcdf
-装点	bcdf
+装点	bcdfi
 壮丁	bcdg
 装订	bcdgo
-包产到户	bcdh
 装袋	bcdh
 不插电演唱会	bcdhe
+包产到户	bcdhu
 壮胆	bcdj
 装弹	bcdjo
 撞到	bcdk
@@ -484,8 +484,8 @@ sort: by_weight
 本草纲目	bcgm
 装过	bcgo
 装裹	bcgoo
-百尺竿头	bcgt
 壮观	bcgt
+百尺竿头	bcgte
 庄股	bcgu
 病虫害	bch
 装潢	bchc
@@ -516,27 +516,27 @@ sort: by_weight
 壮举	bcju
 壮举	bcjv
 爆粗口	bck
-病从口入祸从口出	bckc
 状况	bckc
+病从口入祸从口出	bckco
 撞开	bckh
 壮阔	bcko
 病从口入	bckr
-百草枯	bcku
 装酷	bcku
+百草枯	bckue
 变成了	bcl
 装料	bcldo
 撞脸	bclf
 不出来	bclh
-不成立	bcli
 壮丽	bcli
+不成立	bclie
 不辞劳苦	bclk
 幢楼	bclr
-保持联系	bclx
 壮烈	bclx
+保持联系	bclxi
 不重码	bcm
 壮苗	bcmd
-鞭长莫及	bcmj
 装满	bcmj
+鞭长莫及	bcmje
 庄门	bcmn
 不吃馒头蒸口气	bcmq
 不吃馒头争口气	bcmqe
@@ -583,14 +583,14 @@ sort: by_weight
 撞衫	bcsj
 不出所料	bcsl
 补充说明	bcsm
-庄生	bcsm
 不差什么	bcsme
+庄生	bcsmo
 壮硕	bcso
 撞上	bcsp
 撞伤	bcspi
 抱残守缺	bcsq
-冰醋酸	bcst
 装蒜	bcst
+冰醋酸	bcsto
 装束	bcsu
 撞树	bcsui
 撞碎	bcsv
@@ -616,10 +616,10 @@ sort: by_weight
 不成问题	bcwt
 搏出位	bcww
 北朝鲜	bcx
-别出心裁	bcxc
 装箱	bcxc
-彼此相关	bcxg
+别出心裁	bcxco
 壮行	bcxg
+彼此相关	bcxgu
 报仇雪恨	bcxh
 不辞辛苦	bcxk
 不辞辛劳	bcxl
@@ -644,9 +644,9 @@ sort: by_weight
 装有	bcyr
 壮阳	bcys
 装样	bcyso
-抱成一团	bcyt
-庄园	bcyt
-状元	bcyto
+状元	bcyt
+抱成一团	bcyti
+庄园	bcyto
 庄院	bcytoa
 状语	bcyu
 壮语	bcyuo
@@ -664,26 +664,25 @@ sort: by_weight
 装着	bcze
 不成字字根	bczg
 不存在	bczh
-撞在	bczh
+撞在	bczhi
 装在	bczho
 装载	bczhou
 壮哉	bczhou
-不称职	bczi
 装置	bczi
+不称职	bczie
 庄子	bczio
 状纸	bczioa
 壮志	bczioe
 彼此之间	bczj
-不存在了	bczl
 庄重	bczl
+不存在了	bczle
 悲从中来	bczli
-撞钟	bczli
 保持中立	bczlii
+撞钟	bczliu
 装帧	bczn
 撞针	bczni
-被称作	bczo
 装作	bczo
-装做	bczoo
+被称作	bczoo
 庄周	bczr
 不齿之事	bczs
 庄主	bczu
@@ -709,9 +708,9 @@ sort: by_weight
 标榜	bdbp
 百毒不侵	bdbq
 标榜	bdbs
-不得不说	bdbs
-不多不少	bdbse
+不得不说	bdbse
 不打不相识	bdbsei
+不多不少	bdbseu
 不得不低头	bdbt
 背对背	bdbw
 不大不小	bdbx
@@ -867,7 +866,7 @@ sort: by_weight
 骠骑	bdqi
 镖旗	bdqii
 标签	bdqj
-不得其解	bdqj
+不得其解	bdqje
 标枪	bdqm
 不得其门而入	bdqr
 不得其所	bdqs
@@ -977,9 +976,8 @@ sort: by_weight
 北大西洋公约组织	bdxzi
 不答应	bdy
 标引	bdyb
-百度一下你就知道	bdyd
 必定要	bdyd
-不动摇	bdyde
+百度一下你就知道	bdyde
 表演	bdyf
 鼻窦炎	bdyfu
 不得已	bdyi
@@ -998,9 +996,9 @@ sort: by_weight
 必定有	bdyr
 标有	bdyre
 表扬	bdys
-别的意思	bdys
 不等于是	bdyse
 不等于说	bdyseu
+别的意思	bdyso
 标语	bdyu
 不等于	bdyue
 不大于	bdyuee
@@ -1056,7 +1054,7 @@ sort: by_weight
 不方便	bfb
 便把	bfba
 便装	bfbc
-不分彼此	bfbc
+不分彼此	bfbce
 变装	bfbco
 便便	bfbf
 变白	bfbh
@@ -1101,7 +1099,7 @@ sort: by_weight
 变丑	bfcr
 编凑	bfcra
 鞭策	bfcs
-不负此生	bfcs
+不负此生	bfcse
 便车	bfcsi
 编出	bfcu
 变出	bfcuo
@@ -1408,8 +1406,8 @@ sort: by_weight
 辨析	bfxi
 变细	bfxio
 白费心机	bfxj
-变现	bfxj
 边线	bfxja
+变现	bfxjo
 边笑	bfxk
 编校	bfxka
 变小	bfxko
@@ -1439,10 +1437,10 @@ sort: by_weight
 辨音	bfyboo
 便要	bfyd
 遍野	bfye
-八分音符	bfyf
 边沿	bfyf
 编演	bfyfa
 便宴	bfyfi
+八分音符	bfyfu
 便应	bfyg
 变硬	bfygo
 便衣	bfyi
@@ -1464,8 +1462,8 @@ sort: by_weight
 便又	bfyri
 辩友	bfyro
 变样	bfys
-并非易事	bfys
 不妨一试	bfyse
+并非易事	bfyso
 边缘	bfyt
 边远	bfyta
 便于	bfyu
@@ -1481,8 +1479,8 @@ sort: by_weight
 不费一兵一卒	bfyze
 百分之	bfz
 百分之百	bfzb
-编纂	bfzb
-编撰	bfzba
+编纂	bfzba
+编撰	bfzbai
 百分之一百	bfzbe
 不分皂白	bfzbeu
 便装	bfzc
@@ -1737,7 +1735,7 @@ sort: by_weight
 布谷鸟	bgn
 并能	bgnm
 并能	bgns
-不关你事	bgns
+不关你事	bgnse
 不公平	bgp
 兵痞	bgpe
 冰啤	bgpeo
@@ -1895,7 +1893,7 @@ sort: by_weight
 病因	bgyb
 不敢越雷池一步	bgybe
 并要	bgyd
-不够用的	bgyd
+不够用的	bgyde
 冰岩	bgyfo
 兵营	bgyg
 并应	bgygo
@@ -2177,11 +2175,11 @@ sort: by_weight
 不合逻辑	bhlj
 白龙	bhll
 败落	bhlo
-白浪	bhlp
+白狼	bhlp
 比葫芦画瓢	bhlpe
 败柳	bhlq
-白浪	bhls
 辩护律师	bhls
+白狼	bhlsu
 冰火两重天	bhlt
 败露	bhlu
 白鹿	bhluu
@@ -2326,9 +2324,9 @@ sort: by_weight
 百亿	bhvie
 百依	bhviei
 白蚁	bhviu
-不寒而栗	bhvl
 不好用	bhvl
-百害而无一利	bhvle
+不寒而栗	bhvle
+百害而无一利	bhvleo
 不欢而散	bhvs
 百害而无一益	bhvy
 不好玩	bhw
@@ -2402,12 +2400,12 @@ sort: by_weight
 柏杨	bhype
 白羊	bhypu
 柏油	bhyr
-白杨	bhys
 不好意思	bhys
 柏杨	bhyse
 碧海银沙	bhyse
 冰寒于水	bhyso
-白羊	bhysu
+白杨	bhysu
+白羊	bhysuo
 百元	bhyt
 白玉	bhyu
 败于	bhyua
@@ -2839,8 +2837,8 @@ sort: by_weight
 鼻祖	bizu
 闭嘴	bizv
 笔记本	bjb
-扮装	bjbc
 笔记本电池	bjbc
+扮装	bjbci
 兵家必争之地	bjbd
 半边	bjbf
 斑白	bjbh
@@ -2900,8 +2898,8 @@ sort: by_weight
 伴唱	bjcpi
 半场	bjcpo
 班车	bjcs
-饱经沧桑	bjcs
 板车	bjcse
+饱经沧桑	bjcsu
 搬出	bjcu
 板寸	bjcy
 不记得	bjd
@@ -3243,7 +3241,7 @@ sort: by_weight
 白居易	bjviu
 办案	bjvj
 搬用	bjvl
-比肩而立	bjvl
+比肩而立	bjvle
 伴儿	bjvu
 比较而言	bjvy
 北京奥运	bjvyi
@@ -3278,8 +3276,8 @@ sort: by_weight
 办学	bjxh
 比较喜欢	bjxhe
 背景虚化	bjxhi
-半仙	bjxj
 不拘小节	bjxj
+半仙	bjxjo
 比较小	bjxk
 不就行了	bjxl
 比较下来	bjxle
@@ -3290,7 +3288,7 @@ sort: by_weight
 不仅限于	bjxy
 边际效应	bjxya
 办学	bjxz
-北京西站	bjxz
+北京西站	bjxzi
 不介意	bjy
 板鸭	bjya
 板牙	bjyae
@@ -3298,8 +3296,8 @@ sort: by_weight
 伴音	bjybi
 不拘一格降人才	bjyc
 不仅要	bjyd
-不经意的	bjyd
 败局已定	bjyda
+不经意的	bjyde
 半腰	bjydo
 半夜	bjye
 半叶	bjyeo
@@ -3343,7 +3341,7 @@ sort: by_weight
 背景音乐	bjyyi
 拌匀	bjyyiu
 半月	bjyz
-不经一事不长一智	bjyz
+不经一事不长一智	bjyze
 伴月	bjyzi
 不仅在	bjz
 板砖	bjzb
@@ -81611,12 +81609,8 @@ sort: by_weight
 虱子	sizia
 丝织	siziaa
 司职	siziae
-始知	siziau
-始自	siziau
 丝质	siziau
-石子	sizie
-士子	siziea
-式子	siziea
+式子	sizie
 柿子	siziea
 石质	sizieu
 食指	sizii
@@ -81624,26 +81618,16 @@ sort: by_weight
 师职	siziie
 师侄	siziii
 师资	siziio
-使之	siziio
-四字	siziio
 四肢	siziiu
 实质	sizio
-施治	sizioa
-时滞	sizioa
 试纸	sizioa
-嗣子	sizioa
-时至	sizioe
 实职	sizioe
-时值	sizioi
 市值	sizioi
 识字	sizioo
-视之	sizioo
 试制	siziou
 狮子	siziu
 失职	siziue
-矢志	siziue
 十指	siziui
-失之	siziuo
 十字	siziuo
 私自	siziuu
 施展	sizj
@@ -81813,10 +81797,10 @@ sort: by_weight
 实际参数	sjcso
 山川	sjct
 四脚朝天	sjcti
-闪出	sjcu
+删除	sjcu
 书记处	sjcua
 散出	sjcue
-删除	sjcuu
+闪出	sjcuo
 世纪宠儿	sjcv
 实践创新	sjcx
 山村	sjcy
@@ -124329,8 +124313,8 @@ sort: by_weight
 装有	zcyr
 壮阳	zcys
 装样	zcyso
-庄园	zcyt
-状元	zcyto
+状元	zcyt
+庄园	zcyto
 庄院	zcytoa
 自成一体	zcytu
 状语	zcyu
@@ -124364,7 +124348,6 @@ sort: by_weight
 装帧	zczn
 撞针	zczni
 装作	zczo
-装做	zczoo
 在此之前	zczq
 整存整取	zczqe
 庄周	zczr
