--- a/rime/xkyd.extended.dict.yaml
+++ b/rime/xkyd.extended.dict.yaml
@@ -44,8 +44,11 @@ import_tables:
 # 扩展：补充
   - xkydbc
 # ---------------------------------------
-# 扩展：超级字词
+# 扩展：U 引导超级字词
   - xkydcj
+# ---------------------------------------
+# 扩展：I 引导古诗词
+  - xkydgs
 # ---------------------------------------
 # 扩展：用户词库
   - xkyd.user
