--- a/rime/xkydyw.dict.yaml
+++ b/rime/xkydyw.dict.yaml
@@ -9,17 +9,16 @@ AV女优	avny
 bilibili弹幕网	bbdw
 biangbiang面	bbmf
 B超	bcki
-B站	bzj
-打call	dcal
+B站	bzjio
+打call	dacli
 哆啦A梦	dlam
 抖M	drm
-抖S	drsiu
+抖S	drsi
 E迅速录机	exsj
 E迅速录	exsl
 E迅	exy
 疯狂打call	fkdc
 gay里gay气	glgq
-好B都让狗艹了	hbdl
 IP地址	ipdz
 卡拉OK	klok
 裸眼3D	lysdo
