更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -13034,15 +13034,16 @@ sort: by_weight
 睡	sviaue
 荽	svii
 荽	sviiuo
-虽	svo
-谁	svoa
+谁	svo
+说	svoa
 谁	svoaio
-说	svoao
+谇	svoao
 谇	svoaoe
 说	svoaou
 襚	svoaou
 旞	svoe
 旞	svoeue
+虽	svoi
 虽	svoiae
 邃	svoo
 邃	svoooa
