更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -3975,8 +3975,8 @@ sort: by_weight
 不可拥有	bkyyee
 包蕴	bkyyu
 包月	bkyz
-不可预知	bkyz
-不可言状	bkyze
+不可预知	bkyze
+不可言状	bkyzee
 半空中	bkz
 爆炸	bkza
 包扎	bkzau
@@ -4151,8 +4151,8 @@ sort: by_weight
 保龄球	blq
 柏林墙	blqc
 波澜起伏	blqf
-柏林墙	blqm
 不留情面	blqm
+柏林墙	blqme
 玻璃球	blqo
 玻璃球	blqq
 壁立千仞	blqr
@@ -4208,8 +4208,8 @@ sort: by_weight
 不良习惯	blxg
 病理学	blxh
 波浪线	blxj
-半老徐娘	blxn
 玻璃鞋	blxn
+半老徐娘	blxno
 玻璃纤维	blxw
 玻璃鞋	blxx
 病理学	blxz
@@ -4221,7 +4221,7 @@ sort: by_weight
 保留意见	blyji
 变了样	blyp
 变了样	blys
-不利因素	blys
+不利因素	blyse
 白鹿原	blyt
 不利于	blyu
 不利于	blyv
@@ -4358,7 +4358,7 @@ sort: by_weight
 报幕员	bmyt
 比目鱼	bmyu
 比目鱼	bmyv
-蔽美扬恶	bmyv
+蔽美扬恶	bmyvi
 并没有因为	bmyw
 不名一文	bmywe
 并没有什么卵用	bmyy
@@ -4467,7 +4467,7 @@ sort: by_weight
 本家	bnjse
 本剧	bnju
 本剧	bnjv
-不念旧恶	bnjv
+不念旧恶	bnjve
 笨贼	bnjw
 本届	bnjx
 本节	bnjxe
@@ -4872,8 +4872,8 @@ sort: by_weight
 帮帮	bpbp
 棒棒	bpbpe
 帮帮	bpbs
-不胖不瘦	bpbs
 棒棒	bpbse
+不胖不瘦	bpbseu
 蚌埠	bpbu
 不偏不倚	bpby
 不排除	bpc
@@ -4920,7 +4920,7 @@ sort: by_weight
 绑牢	bplk
 帮忙	bpmp
 帮忙	bpms
-不怕没柴烧	bpms
+不怕没柴烧	bpmse
 帮你	bpni
 不匹配	bpp
 绑票	bppd
@@ -5130,12 +5130,11 @@ sort: by_weight
 本硕博连读	bsbd
 不是办法	bsbf
 棒冰	bsbg
-比萨饼	bsbg
+比萨饼	bsbge
 半死不活	bsbh
 不死不活	bsbhe
 膀臂	bsbi
 百思不得其解	bsbj
-帮办	bsbj
 百思不解	bsbje
 百撕不得骑姐	bsbjei
 比赛版	bsbjeo
@@ -5148,9 +5147,9 @@ sort: by_weight
 帮帮	bsbp
 棒棒	bsbpe
 帮帮	bsbs
-不三不四	bsbs
-百试不爽	bsbse
 棒棒	bsbse
+不三不四	bsbse
+百试不爽	bsbseo
 半生不熟	bsbso
 半身不遂	bsbsou
 蚌埠	bsbu
