更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -81042,7 +81042,8 @@ sort: by_weight
 视如	siruo
 湿润	siry
 师说	sis
-厮杀	sisa
+四杀	sisa
+厮杀	sisae
 是啥	sisao
 施舍	sise
 巳蛇	sisea
@@ -82240,7 +82241,8 @@ sort: by_weight
 尸积如山	sjrs
 善解人意	sjry
 实际上	sjs
-散沙	sjsa
+三杀	sjsa
+散沙	sjsae
 世界市场	sjsc
 三简三字词	sjsce
 数据手册	sjsco
@@ -100239,7 +100241,8 @@ sort: by_weight
 误入	wuruo
 勿入	wuruu
 武师	wus
-误杀	wusa
+五杀	wusa
+误杀	wusao
 乌纱	wusau
 无双	wusc
 五双	wusce
