更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -8916,7 +8916,8 @@ sort: by_weight
 才罢	chbae
 彩妆	chbc
 拆装	chbci
-踩扁	chbf
+才变	chbf
+踩扁	chbfo
 采编	chbfu
 裁编	chbfua
 裁并	chbg
@@ -23689,6 +23690,7 @@ sort: by_weight
 反咬	fjyd
 翻页	fjye
 范爷	fjyei
+反野	fjyeu
 繁衍	fjyf
 富甲一方	fjyf
 翻眼	fjyfu
