--- a/xkyddz.dict.yaml
+++ b/xkyddz.dict.yaml
@@ -4748,9 +4748,8 @@ sort: by_weight
 鲩	htuaoo
 貆	htuo
 貆	htuoeo
-和	hu
-湖	hua
-弧	huae
+湖	hu
+弧	hua
 弧	huaeuu
 滹	huai
 滹	huaiea
@@ -4802,10 +4801,9 @@ sort: by_weight
 芴	huiiua
 葫	huiiuo
 护	huiuoa
-许	huo
-户	huoa
+户	huo
+扈	huoa
 户	huoaeu
-扈	huoao
 扈	huoaoa
 戽	huoaoo
 祜	huoau
