--- a/xkydcz.dict.yaml
+++ b/xkydcz.dict.yaml
@@ -5180,8 +5180,8 @@ sort: by_weight
 波斯帝国	bsdga
 帮顶	bsdge
 绑带	bsdh
-巴士底	bsdi
 邦迪	bsdi
+巴士底	bsdia
 榜单	bsdj
 帮到	bsdk
 保守党	bsdp
@@ -5198,8 +5198,8 @@ sort: by_weight
 不升反降	bsfj
 不设防	bsfp
 帮扶	bsfu
-标识符	bsfu
 绑缚	bsfua
+标识符	bsfue
 绑匪	bsfw
 不是个	bsg
 别是个傻子吧	bsgb
@@ -5210,8 +5210,8 @@ sort: by_weight
 保守估计	bsgj
 不胜感激	bsgje
 帮工	bsgl
-包身工	bsgl
 半双工	bsglo
+包身工	bsglu
 北上广深	bsgs
 比赛规则	bsgz
 备受关注	bsgzu
@@ -5219,8 +5219,8 @@ sort: by_weight
 班师回朝	bshc
 不是很大	bshd
 不识好歹	bshde
-棒喝	bshe
 不适合	bshe
+棒喝	bshee
 不思悔改	bshg
 不是很好	bshh
 表示毫无压力	bshl
@@ -5236,9 +5236,9 @@ sort: by_weight
 不睡觉	bsj
 绑扎	bsja
 本世纪初	bsjc
-白色家电	bsjd
 邦交	bsjd
 帮教	bsjde
+白色家电	bsjdu
 帮着	bsje
 绑着	bsjea
 部首检字法	bsjf
@@ -115777,12 +115777,12 @@ sort: by_weight
 咿唔	yiwuoo
 义乌	yiwuou
 易物	yiwuou
-一位	yiww
-以为	yiwwa
+以为	yiww
+异味	yiwwa
 已为	yiwwao
-异味	yiwwao
-一味	yiwwe
+一位	yiwwe
 一维	yiwwea
+一味	yiwweo
 依偎	yiwwi
 意味	yiwwo
 易位	yiwwoi
